[Refactoring] Modifying structure of output generator code

--- a/src/.gitignore
+++ b/src/.gitignore
@@ -3,3 +3,5 @@ hddl-token.cpp
 hddl.cpp
 hddl.hpp
 hddl.output
+xml/Room\ Preparation/Multiple\ Locations/V2/task_output.xml
+xml/Object\ Picking/task_output.xml
