[Feature addition] Initial version of JSON output generator

--- a/configs/JSON/Room Preparation/Default/configuration.json
+++ b/configs/JSON/Room Preparation/Default/configuration.json
@@ -8,8 +8,8 @@
 
     "output": {
         "output_type": "file",
-        "file_path": "output/Room Preparation/Default/task_output.xml",
-        "file_type": "xml"
+        "file_path": "output/Room Preparation/Default/task_output.json",
+        "file_type": "json"
     },
 
     "location_types": ["Room"],
