--- a/configs/JSON/Room Preparation/Default/configuration.json
+++ b/configs/JSON/Room Preparation/Default/configuration.json
@@ -24,24 +24,30 @@
     "var_mapping": [
         {
             "task_id": "AT1",
-            "map": {
-                "gm_var": "current_room",
-                "hddl_var": "?rm"
-            }
+            "map": [
+                {
+                    "gm_var": "current_room",
+                    "hddl_var": "?rm"
+                }
+            ]
         },
         {
             "task_id": "AT2",
-            "map": {
-                "gm_var": "sanitization_room",
-                "hddl_var": "?srm"
-            }
+            "map": [ 
+                {
+                    "gm_var": "sanitization_room",
+                    "hddl_var": "?srm"
+                }
+            ]
         },
         {
             "task_id": "AT3",
-            "map": {
-                "gm_var": "current_room",
-                "hddl_var": "?rm"
-            }
+            "map": [
+                {
+                    "gm_var": "current_room",
+                    "hddl_var": "?rm"
+                }
+            ]
         }
     ],
 
