--- a/configs/JSON/Room Cleaning/OR/configuration.json
+++ b/configs/JSON/Room Cleaning/OR/configuration.json
@@ -24,17 +24,21 @@
     "var_mapping": [
         {
             "task_id": "AT1",
-            "map": {
-                "gm_var": "current_room",
-                "hddl_var": "?rm"
-            }
+            "map": [
+                {
+                    "gm_var": "current_room",
+                    "hddl_var": "?rm"
+                }
+            ]
         },
         {
             "task_id": "AT2",
-            "map": {
-                "gm_var": "current_room",
-                "hddl_var": "?rm"
-            }
+            "map": [
+                {
+                    "gm_var": "current_room",
+                    "hddl_var": "?rm"
+                }
+            ]
         }
     ],
 
