[Feature Addition] Now accepting multiple comparison conditions in valid mission generator. Fixing problem in configuration file of the Keeping Clean example

--- a/configs/JSON/Keeping Clean/configuration.json
+++ b/configs/JSON/Keeping Clean/configuration.json
@@ -99,7 +99,7 @@
             "belongs_to": "world_db",
             "mapped_type": "predicate",
             "map": {
-                "pred": "equipment_ok",
+                "pred": "equipmentok",
                 "arg_sorts": ["robot"]
             }
         }
