[Modification] Fixing minor bug in constraint manager. Fixing minor bug in achieve condition initialization

--- a/configs/JSON/Keeping Clean/configuration2.json
+++ b/configs/JSON/Keeping Clean/configuration2.json
@@ -32,6 +32,15 @@
             ]
         },
         {
+            "task_id": "AT2",
+            "map": [
+                {
+                    "gm_var": "current_room",
+                    "hddl_var": "?rm"
+                }
+            ]
+        },
+        {
             "task_id": "AT3",
             "map": [
                 {
